# langchain-tutorials

./: .gitignore  Makefile  pyproject.toml
tutorials/basics/01_simple_LLM_application/: llm_app.ipynb  serve.py
tutorials/basics/02_build_a_chatbot/: chatbot.ipynb
tutorials/basics/03_retrievers/: retrievers.ipynb
tutorials/basics/04_build_an_agent/: agent.ipynb
tutorials/specialized_tasks/01_build_an_extraction_chain/: extraction_chain.ipynb
tutorials/specialized_tasks/02_data_generation/: data_generation.ipynb
tutorials/specialized_tasks/03_text_classification/: tagging.ipynb
tutorials/specialized_tasks/04_text_summarization/: summarization.ipynb
tutorials/working_with_external_knowledge/01_build_a_rag/: rag.ipynb  rag.py
tutorials/working_with_external_knowledge/02_build_a_conversational_rag/: conversational_rag.ipynb  conversational_rag_with_agents.py  conversational_rag_with_chains.py
tutorials/working_with_external_knowledge/03_build_a_rag_over_structured_data/: rag_sql.ipynb
tutorials/working_with_external_knowledge/04_build_a_query_analysis_system/: query_system.ipynb
tutorials/working_with_external_knowledge/05_build_a_local_rag/: local_rag.ipynb
tutorials/working_with_external_knowledge/06_build_a_qa_over_graph_db/: qa_over_graph.ipynb
tutorials/working_with_external_knowledge/07_build_a_qa_over_pdfs/: qa_over_pdfs.ipynb
