[project]
name = "langchain-tutorials"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "langchain>=0.2.16",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
