[project]
name = "langchain-tutorials"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alexandre Henrique", email = "alexandre.hsd@gmail.com"},
]
dependencies = [
    "langchain>=0.2.16",
    "langchain-openai>=0.1.23",
    "ipykernel>=6.29.5",
    "langserve[all]>=0.2.3",
    "uvicorn>=0.30.6",
    "fastapi>=0.114.1",
    "langchain-community>=0.2.16",
    "langchain-chroma>=0.1.3",
    "langgraph>=0.2.19",
    "langchain-anthropic>=0.1.23",
    "tavily-python>=0.4.0",
    "langgraph-checkpoint-sqlite>=1.0.3",
    "bs4>=0.0.2",
    "faiss-cpu>=1.8.0.post1",
    "youtube-transcript-api>=0.6.2",
    "pytube>=15.0.0",
    "langchain-ollama>=0.1.3",
    "neo4j>=5.24.0",
    "pypdf>=4.3.1",
    "langchain-experimental>=0.0.65",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
